--- a/oktober.html
+++ b/oktober.html
@@ -9,6 +9,10 @@
 
 <body>
 
+    <header class="header">
+        <img src="" alt="" class="header__logo">
+        <div class="header__sign-in">Войти</div>
+    </header>
 </body>
 
 </html>
