--- a/oktober.html
+++ b/oktober.html
@@ -13,6 +13,17 @@
         <img src="" alt="" class="header__logo">
         <div class="header__sign-in">Войти</div>
     </header>
+    <footer>
+        <img src="" alt="" class="footer__photo">
+        <div class="footer__links">
+            <div class="footer__link"></div>
+            <div class="footer__link"></div>
+            <div class="footer__link"></div>
+            <div class="footer__link"></div>
+            <div class="footer__link"></div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
