--- a/oktober.html
+++ b/oktober.html
@@ -22,7 +22,7 @@
             <div class="footer__link"></div>
             <div class="footer__link"></div>
         </div>
-
+        <div class="123"></div>
     </footer>
 </body>
 
