--- a/oktober.html
+++ b/oktober.html
@@ -12,6 +12,8 @@
     <header class="header">
         <img src="" alt="" class="header__logo">
         <div class="header__sign-in">Войти</div>
+        <a class="header__sign-up">Зарегистрироваться</a>
+        <div class="header__sign-up">Забыли пароль</div>
     </header>
     <footer>
         <img src="" alt="" class="footer__photo">
