--- a/oktober.html
+++ b/oktober.html
@@ -14,6 +14,7 @@
         <div class="header__sign-in">Войти</div>
         <a class="header__sign-up">Зарегистрироваться</a>
         <div class="header__sign-up">Забыли пароль</div>
+        <p>Параграф 1</p>
     </header>
     <footer>
         <img src="" alt="" class="footer__photo">
