--- a/oktober.html
+++ b/oktober.html
@@ -16,6 +16,7 @@
         <div class="header__sign-up">Забыли пароль</div>
         <p>Параграф 1</p>
     </header>
+    <main>123</main>
     <footer>
         <img src="" alt="" class="footer__photo">
         <div class="footer__links">
