--- a/DZ 19.10/index.html
+++ b/DZ 19.10/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -77,11 +77,7 @@
     <p class="text green">Lorem ipsum dolor sit.</p>
     <div>
       <input type="text" class="task-input" placeholder="Введите задачу" />
-      <input
-        type="text"
-        class="task-description"
-        placeholder="Введите описание задачи"
-      />
+      <input type="text" class="task-description" placeholder="Введите описание задачи" />
       <button class="add-task-button" disabled>Добавить задачу</button>
     </div>
 
