--- a/data-атрибуты/index.html
+++ b/data-атрибуты/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -31,27 +31,16 @@
   </style>
   <body>
     <div class="input-field">
-      <input
-        type="text"
-        data-validation-message="Длина сообщения не должна быть больше 5 символов"
-      />
+      <input type="text" data-validation-message="Длина сообщения не должна быть больше 5 символов" />
     </div>
     <button>Сохранить</button>
     <div class="cards">
       <div class="card">
-        <h3 class="card__title">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
-          architecto.
-        </h3>
-        <img
-          src="https://i.pinimg.com/736x/9f/b3/d3/9fb3d303905046143b259f42e33c7844.jpg"
-          alt=""
-        />
+        <h3 class="card__title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, architecto.</h3>
+        <img src="https://i.pinimg.com/736x/9f/b3/d3/9fb3d303905046143b259f42e33c7844.jpg" alt="" />
         <p class="card__text">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit
-          possimus aperiam fugiat incidunt iste aut consectetur neque odio
-          maiores, nihil animi, dignissimos laudantium quisquam dolores autem!
-          Exercitationem minima rerum necessitatibus!
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit possimus aperiam fugiat incidunt iste aut consectetur neque odio
+          maiores, nihil animi, dignissimos laudantium quisquam dolores autem! Exercitationem minima rerum necessitatibus!
         </p>
         <button class="card__button">Ok!</button>
       </div>
