--- a/modal/modal-modifided.html
+++ b/modal/modal-modifided.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -97,16 +97,10 @@
       <div class="modal__content">
         <span class="modal__close">X</span>
         <p class="modal__text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae
-          expedita quas, eum praesentium aliquid accusantium dolorum unde
-          repellat earum a voluptatibus molestias! Provident, culpa! Officia
-          voluptates expedita numquam nihil blanditiis.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae expedita quas, eum praesentium aliquid accusantium dolorum
+          unde repellat earum a voluptatibus molestias! Provident, culpa! Officia voluptates expedita numquam nihil blanditiis.
         </p>
-        <img
-          src="https://w.forfun.com/fetch/d9/d9a563e2cc3c9e2ce27ef27f63b3b989.jpeg"
-          alt="Sample Image"
-          class="modal__photo"
-        />
+        <img src="https://w.forfun.com/fetch/d9/d9a563e2cc3c9e2ce27ef27f63b3b989.jpeg" alt="Sample Image" class="modal__photo" />
       </div>
     </div>
     <script src="script.js"></script>
