--- a/oktober.html
+++ b/oktober.html
@@ -1,38 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header class="header">
-        <img src="" alt="" class="header__logo">
-        <div class="header__sign-in">Войти</div>
-        <a class="header__sign-up">Зарегистрироваться</a>
-        <div class="header__sign-up">Забыли пароль</div>
-        <p>Параграф 1</p>
+      <img src="" alt="" class="header__logo" />
+      <div class="header__sign-in">Войти</div>
+      <a class="header__sign-up">Зарегистрироваться</a>
+      <div class="header__sign-up">Забыли пароль</div>
+      <p>Параграф 1</p>
     </header>
     <main>123</main>
     <footer>
-        <img src="" alt="" class="footer__photo">
-        <div class="footer__links">
-            <div class="footer__link"></div>
-            <div class="footer__link"></div>
-            <div class="footer__link"></div>
-            <div class="footer__link"></div>
-            <div class="footer__link"></div>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </div>
-        <div class="123"></div>
+      <img src="" alt="" class="footer__photo" />
+      <div class="footer__links">
+        <div class="footer__link"></div>
+        <div class="footer__link"></div>
+        <div class="footer__link"></div>
+        <div class="footer__link"></div>
+        <div class="footer__link"></div>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="123"></div>
     </footer>
-</body>
-
+  </body>
 </html>
