--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<style>
+  </head>
+  <style>
     .text {
-            transition: all 0.3s ease 0s;
+      transition: all 0.3s ease 0s;
     }
 
     .green {
-        background-color: limegreen;
+      background-color: limegreen;
     }
-</style>
-<body>
+  </style>
+  <body>
     <p class="text">Lorem ipsum dolor sit.</p>
     <div>
-        <input type="text" placeholder="Число 1">
-        <input type="text" placeholder="Число 2">
+      <input type="text" placeholder="Число 1" />
+      <input type="text" placeholder="Число 2" />
     </div>
     <button class="sum-button">Посчитать сумму</button>
     <button>Изменить текст</button>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
