--- a/toDo-22.10/index.html
+++ b/toDo-22.10/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -85,9 +85,7 @@
         /* Белый текст */
         border: none;
         border-radius: 5px;
-        transition:
-          background-color 0.3s ease,
-          transform 0.2s ease;
+        transition: background-color 0.3s ease, transform 0.2s ease;
       }
 
       .add-task-button:active,
@@ -118,6 +116,6 @@
 
     <ul class="todo-list"></ul>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
