--- a/макет с детьми/main-layout.html
+++ b/макет с детьми/main-layout.html
@@ -21,33 +21,38 @@
         <body>
             <div class="container">
                 <header class="header">
-                    <!-- Логотип -->
-                    <div class="header__logo">Kids Story</div>
+                    <div class="header__line" style="display: flex; gap: 25px; justify-content: end">
+                        <span class="header__contacts-address">Москва, ул. Муравская д.38, к.1</span>
+                        <span class="header__contacts-metro"
+                            >ЖК Мир Митино <a href="#" class="header__metro-link">м. Пятницкое шоссе</a></span
+                        >
+                    </div>
+                    <div class="header__line">
+                        <!-- Логотип -->
+                        <div class="header__logo">Kids Story</div>
 
-                    <!-- Меню -->
-                    <nav class="header__menu">
-                        <a href="#" class="header__menu-link">О нас</a>
-                        <a href="#" class="header__menu-link">Расписание</a>
-                        <a href="#" class="header__menu-link">Программа</a>
-                        <a href="#" class="header__menu-link">Фото и видео</a>
-                        <a href="#" class="header__menu-link">Команда</a>
-                        <a href="#" class="header__menu-link">Контакты</a>
-                    </nav>
+                        <!-- Меню -->
+                        <nav class="header__menu">
+                            <a href="#" class="header__menu-link">О нас</a>
+                            <a href="#" class="header__menu-link">Расписание</a>
+                            <a href="#" class="header__menu-link">Программа</a>
+                            <a href="#" class="header__menu-link">Фото и видео</a>
+                            <a href="#" class="header__menu-link">Команда</a>
+                            <a href="#" class="header__menu-link">Контакты</a>
+                        </nav>
 
-                    <!-- Контакты -->
-                    <div class="header__contacts">
-                        <div class="header__contacts-info">
-                            <!-- <span class="header__contacts-address">Москва, ул. Муравская д.38, к.1</span>
-                    <span class="header__contacts-metro">ЖК Мир Митино <a href="#" class="header__metro-link">м.
-                            Пятницкое шоссе</a></span> -->
-                            <span class="header__contacts-phone">+7 495 123 34 25</span>
-                            <span class="header__contacts-text">Заказать обратный звонок</span>
+                        <!-- Контакты -->
+                        <div class="header__contacts">
+                            <div class="header__contacts-info">
+                                <span class="header__contacts-phone">+7 495 123 34 25</span>
+                                <span class="header__contacts-text">Заказать обратный звонок</span>
+                            </div>
+                            <div class="header__contacts-icons">
+                                <img src="/img/vk.svg" alt="VK" />
+                                <img src="/img/tg.svg" alt="Telegram" />
+                            </div>
+                            <button class="header__contacts-button">Записаться на экскурсию</button>
                         </div>
-                        <div class="header__contacts-icons">
-                            <img src="/img/vk.svg" alt="VK" />
-                            <img src="/img/tg.svg" alt="Telegram" />
-                        </div>
-                        <button class="header__contacts-button">Записаться на экскурсию</button>
                     </div>
                 </header>
             </div>
@@ -59,7 +64,7 @@
                     </div>
                     <div class="main-info__image">
                         <div class="main-info__image-boy">
-                            <img src="img/boy.png" alt="мальчик" />
+                            <!-- <img src="img/boy.png" alt="мальчик" /> -->
                         </div>
                     </div>
                 </div>
